<resources>
    <string name="app_name">TrailBlaze</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="helloHome">Hello HOME Fragment</string>
    <string name="helloMap">Hello MAP Fragment</string>
    <string name="helloFavorites">Hello FAVORITES Fragment</string>
    <string name="helloProfile">Hello PROFILE Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="map_image">Map</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="favorites">Favorites</string>
    <string name="help_center">Help Center</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="btn_back">Goes back to the previous page</string>
    <string name="settings">Settings</string>
    <string name="forgotpassword1">Enter the Email address associated with your account.</string>
    <string name="forgotpassword2">We will email you a link to reset your password</string>
    <string name="aspects">What aspect/s of hiking do you like to experience most?</string>
    <string name="location">TrailBlaze utilizes your location to provide personalized suggestions of nearby trails,
        please enter your location.
    </string>
    <string name="distance">How far would you like to receive suggested trails?</string>
    <string name="interact">How would you like to interact with the community></string>
    <string name="interaction1">I would like my account to be found by others.</string>
    <string name="interaction2">I would like my hiking experience shared with others and/or on leaderboards.</string>
    <string name="interaction3">I would like to volunteer for creating and maintaining trails for my community.</string>
    <string name="interaction4">I would like to be notified if someone is in danger or any potential danger is on a
        trail.
    </string>
    <string name="options">Please select your preferences for each of the categories listed below.</string>
    <string name="privacy_policy1">Your privacy is important to us. It is TrailBlaze policy to respect your privacy
        regarding any information we may collect from you across our website, and other sites we own and operate.
    </string>
    <string name="privacy_policy2">We only ask for personal information when we truly need it to provide a service to
        you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re
        collecting it and how it will be used.
    </string>
    <string name="privacy_policy3">We only retain collected information for as long as necessary to provide you with
        your requested service.">
    </string>
    <string name="titleForgotPassword">Forgot Password</string>
    <string name="titleEmail">Email Address</string>
    <string name="titleResetPw">Reset Password</string>
    <string name="titleLogin">Login</string>
    <string name="login1">By signing in you are agreeing to our</string>
    <string name="titleTerms">Terms and Conditions</string>
    <string name="titleRegister">Register</string>
    <string name="passWord">Password</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="personalize">Lets Personalize your account</string>
    <string name="userName">Username</string>
    <string name="dob">Date of Birth mm/dd/yyyy</string>
    <string name="password2">Confirm Password</string>
    <string name="agree">You agree to our</string>
    <string name="createAccount">Create Account</string>
    <string name="titleLogout">Logout</string>
    <string name="reviewTerms">Review Terms and Conditions</string>
    <string name="ok">OK</string>
    <string name="titleNature">Nature</string>
    <string name="titleBreaks">Breaks</string>
    <string name="titleUphill">Uphill</string>
    <string name="pace">Pace</string>
    <string name="titleContinue">Continue</string>
    <string name="menuTitle">Menu</string>
    <string name="exploreTrails">Explore Trails</string>
    <string name="trailChallenges">Trail Challenges</string>
    <string name="safetyTips">Safety Tips</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="water">Stay hydrated: Dehydration can be a serious health problem, so bring more water than you think
        youll need. Use a durable water bottle to ensure you have access to clean water.
    </string>
    <string name="boots">Wear proper footwear: Wear quality closed-toe shoes with good cushioning and grip to avoid sore
        feet and ankle injuries.
    </string>
    <string name="layers">Dress in layers: Wear clothes that work for the weather and avoid cotton.</string>
    <string name="flashligh">Carry essentials: Bring a flashlight, matches, emergency shelter, and extra food and
        water.
    </string>
    <string name="limits">Know your limits: Be aware of your physical abilities and listen to your body. Recognize signs
        of fatigue or distress, such as shortness of breath or dizziness.
    </string>
    <string name="markedtrail">Stay on marked trails: Making shortcuts can lead to erosion and increase your chances of
        getting lost.
    </string>
    <string name="waterfalls">Dont climb on waterfalls: Falls from waterfalls and wet rocks can cause serious injuries
        and deaths.
    </string>
    <string name="whistle">Use a whistle: A whistle can be heard from far away and takes less energy than yelling.
    </string>
    <string name="phone">Dont rely on cell phones: Dont count on cell phones to work in the wilderness.</string>
    <string name="animal">Never feed or touch wildlife: Do not approach or attempt to move sick or injured wildlife.
        Please report any encounters with aggressive, sick or injured animals to a park staff.
    </string>
    <string name="bear">Wildlife lives in all state parks, even near urban areas: Although rare, black bears, mountain
        lions and rattlesnakes may be seen. If you encounter wildlife on the trail, keep your distance, back away slowly
        and do not run. Report your sightings to park staff.
    </string>
    <string name="ticks">Ticks: Tick populations can increase depending on the season. Take the following precautions
        to avoid them:
        Walk in the middle of trails. Use insect repellent. Tuck your pants into your socks. After taking off gear,
        check for hitchhiking ticks. Always do a “tick check” with the help of a friend.
    </string>
    <string name="poisonivy">Poison oak: It is a common plant throughout much of California. Learn to identify its
        shiny, three-leaf pattern, and avoid touching it. If you touch poison oak, wash immediately with water and mild
        soap. Pat dry with a clean towel.
    </string>
    <string name="fun">But mostly have fun! Enjoy nature! Love yourself. And remember leave only footprints, and take
        only memories!
    </string>
    <string name="snakes">Snakes: Always know where you are stepping. For example, if you must traverse a log that has
        fallen across the trail, rather than just stepping over the log, first step up onto the log then step down once
        you know the coast is clear. Be cautious when climbing rocks or picking up firewood. If you see a snake,
        maintain a distance of at least 6 feet. Most bites occur when people get too close or try to touch them.
    </string>
    <string name="park_image">park_image</string>
    <string name="latitude_heading">Latitude:</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_heading">Longitude:</string>
    <string name="address_heading">Address:</string>
    <string name="activities">Activities</string>
    <string name="addresses">Addresses</string>
    <string name="operating_hours">Operating Hours</string>
    <string name="contacts">Contacts</string>
    <string name="entrance_passes">Entrance Passes</string>
    <string name="images">Images</string>
    <string name="weather_info">Weather Info</string>
    <string name="photos">Photos</string>
    <string name="activities_heading">Available Activities:</string>
    <string name="operating_hours_header">Hours of Operation:</string>
    <string name="contact_heading">Contact Us:</string>
    <string name="phone_number_heading">Phone Number:</string>
    <string name="email_heading">Email:</string>
    <string name="entrance_fee_heading">Entrance Fee:</string>
    <string name="weather_info_heading">Yearly Weather Conditions:</string>
    <string name="achievementsTitle">TrailBlaze Challenges</string>
    <string name="overallProgress">Overall Progress</string>
    <string name="trailblazer">Trailblazer: Complete a trail of a certain distance or elevation gain.</string>
    <string name="mountainclimber">Mountain Climber: Reach a specific altitude or summit.</string>
    <string name="longdistancetrekker">Long-Distance Trekker: Hike a certain number of miles in a single day or week
    </string>
    <string name="habitualhiker">Habitual Hiker: Hike a certain number of times per week or month.</string>
    <string name="weekendwarrior">Weekend Warrior: Complete a trail every weekend.</string>
    <string name="dailyadventurer">Daily Adventurer: Hike at least once a day for a week.</string>
    <string name="conqueror">Conqueror: Complete a challenging trail with a difficult rating.</string>
    <string name="explorer">Explorer: Hike trails in various terrains (e.g., mountains, forests, deserts).</string>
    <string name="trailmaster">Trail Master: Complete trails in all four seasons.</string>
    <string name="socialbutterfly">Social Butterfly: Hike with a group of friends or family.</string>
    <string name="teamplayer">Team Player: Complete a group challenge or relay race.</string>
    <string name="safteyexpert">Safety Expert: Look at the safety tips.</string>
    <string name="communitybuilder">Community Builder: Organize a group hike or event.</string>
    <string name="wildlifewatcher">Wildlife Watcher: Spot a specific animal or bird on a hike.</string>
    <string name="parkInfo">Park Information</string>
    <string name="parkName">Park Name</string>
    <string name="parkDescription">Park Description</string>
    <string name="notificationTitle">Notifications</string>
    <string name="appearanceTitle">Appearance</string>
    <string name="helpAndSupportTitle">Help and Support</string>
    <string name="contactTitle">If you are experiencing any issues, please let us know. We will try to solve them as
        soon as possible.
    </string>
    <string name="contactTitle2">Title</string>
    <string name="contactTitle3">Explain the problem</string>
    <string name="submit">Submit</string>
    <string name="inputText">Input Text</string>
    <string name="description">Enter a description...</string>
    <string name="contact4">You can also contact us at</string>
    <string name="supportEmail">customersupport@trailblaze.com</string>
    <string name="darkMode">Dark Mode</string>
    <string name="metricUnits">Metric Units</string>
    <string name="watcherReminder">Watcher Reminder</string>
    <string name="photoOpp">Photo Opportunities</string>
    <string name="friendRequest">Friend Requests</string>
    <string name="notifications">Notifications</string>
    <string name="trailUpdates">Trail Updates</string>
</resources>