<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <ImageButton
            android:layout_width="39dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/chevron_left"
            android:background="@android:color/transparent"
            android:id="@+id/chevron_left"
            android:contentDescription="@string/description"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleLayout"
            android:layout_below="@id/chevron_left"
            android:orientation="vertical">
        <TextView
                android:id="@+id/Settings"
                android:layout_gravity="center_horizontal"
                android:text="@string/parkInfo"
                android:textSize="40sp"
                android:fontFamily="@font/amethysta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_below="@id/titleLayout"
                  android:padding="16dp">

        <!-- Park Name -->
        <TextView
                android:id="@+id/parkNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/parkName" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Park Images (URL or description of images) -->
        <ImageView
                android:id="@+id/parkImagesImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/park_image"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Park Description -->
        <TextView
                android:id="@+id/parkDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="8dp"
                android:text="@string/parkDescription"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Latitude -->
        <TextView
                android:id="@+id/parkLatitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="16sp"/>

        <!-- Longitude -->
        <TextView
                android:id="@+id/parkLongitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="16sp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Addresses -->
        <TextView
                android:id="@+id/parkAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addresses"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Activities -->
        <TextView
                android:id="@+id/parkActivitiesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activities"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Operating Hours -->
        <TextView
                android:id="@+id/parkOperatingHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operating_hours"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Contacts -->
        <TextView
                android:id="@+id/parkContactsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Entrance Passes -->
        <TextView
                android:id="@+id/parkEntrancePassesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance_passes"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

        <!-- Weather Info -->
        <TextView
                android:id="@+id/parkWeatherInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_info"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>