<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swishLayout">

        <!-- Custom Swish Background at the bottom layer -->
        <com.example.trailblaze.view.SwishBackgroundView
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        <ImageButton
                app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/chevron_left"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:layout_below="@id/swishLayout"
            android:orientation="vertical">
        <TextView
                android:id="@+id/Settings"
                android:layout_gravity="center_horizontal"
                android:text="@string/notificationTitle"
                android:textSize="40sp"
                android:fontFamily="@font/amethysta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout  android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="-151dp"
                   android:padding="50dp">
        <Switch
                android:text="@string/notifications"
                android:textSize="18sp"
                android:layout_width="320dp"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
        />

        <Switch
                android:text="@string/trailUpdates"
                android:textSize="18sp"
                android:layout_width="320dp"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                />
        <Switch
                android:text="@string/friendRequest"
                android:textSize="18sp"
                android:layout_width="320dp"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
        />
        <Switch
                android:text="@string/watcherReminder"
                android:textSize="18sp"
                android:layout_width="320dp"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
        />
        <Switch
                android:text="@string/photoOpp"
                android:textSize="18sp"
                android:layout_width="320dp"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
        />
    </LinearLayout>
    <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/flowers"
            android:contentDescription="@string/description"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
    <FrameLayout
            android:id="@+id/frameStackorConnectw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

        <LinearLayout
                android:id="@+id/linearRowFacebookOne"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"/>
    </FrameLayout>
</LinearLayout>