<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swishLayout">

        <!-- Custom Swish Background at the bottom layer -->
        <com.example.trailblaze.view.SwishBackgroundView
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        <ImageButton
                app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/btn_back"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:tint="#CDEDA3"
                android:id="@+id/chevron_left"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_below="@id/swishLayout"
            android:id="@+id/titleLayout"
            android:orientation="vertical">
        <TextView
                android:id="@+id/Settings"
                android:layout_gravity="center_horizontal"
                android:text="@string/helpAndSupportTitle"
                android:textColor="?attr/colorPrimary"
                android:textSize="40sp"
                android:fontFamily="@font/amethysta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/contentLayout"
            android:gravity="center"
            android:padding="16dp"
            android:layout_below="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactTitle"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:fontFamily="@font/amethysta"
                android:gravity="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/contactTitle2"/>
            <EditText
                    android:id="@+id/editTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputText"
                    android:inputType="text"
                    android:fontFamily="@font/amethysta"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"
                    android:textColorHint="?attr/colorPrimary"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/contactTitle3"/>
            <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:inputType="textMultiLine"
                    android:fontFamily="@font/amethysta"
                    android:hint="@string/description"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"
                    android:scrollbars="vertical"
                    android:gravity="top|start"
                    android:textColorHint="?attr/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/submit"
            android:fontFamily="@font/amethysta"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit">
    </Button>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomlayout"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact4"
                android:textColor="?attr/colorPrimary"
                android:fontFamily="@font/amethysta"
                android:layout_gravity="center_horizontal"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/supportEmail"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"
        />
    </LinearLayout>


    </LinearLayout>


</RelativeLayout>