<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swishLayout">

        <!-- Custom Swish Background at the bottom layer -->
        <com.example.trailblaze.view.SwishBackgroundView
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        <ImageButton
                app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/chevron_left"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:layout_below="@id/swishLayout"
            android:orientation="vertical" android:id="@+id/linearLayout">
        <TextView
                android:id="@+id/Settings"
                android:layout_gravity="center_horizontal"
                android:text="@string/appearanceTitle"
                android:textSize="40sp"
                android:fontFamily="@font/amethysta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"/>


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-151dp"
            android:layout_below="@+id/linearLayout"
            android:padding="50dp">

        <Switch
                android:text="@string/darkMode"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:fontFamily="@font/amethysta"
                android:layout_gravity="center_horizontal"
                android:id="@+id/darkMode"/>
        <Switch
                android:text="@string/metricUnits"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:fontFamily="@font/amethysta"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/metricUnits"/>

    </LinearLayout>
    <FrameLayout
            android:id="@+id/frameStackorConnectw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp">

        <ImageView
                android:id="@+id/imageView8"
                android:layout_width="449dp"
                android:layout_height="324dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/flowers"
                android:contentDescription="@string/description"/>
        <LinearLayout
                android:id="@+id/linearRowFacebookOne"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"/>
    </FrameLayout>

</RelativeLayout>